Login system both frontend and backend

--- a/Webinterface/frontend/src/app/landingpage/landingpage.component.html
+++ b/Webinterface/frontend/src/app/landingpage/landingpage.component.html
@@ -1,1 +1,37 @@
-<p>landingpage works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Landing page</title>
+</head>
+<body>
+  <h1>Velkommen til Styring af væksthuset</h1>
+
+
+  <mat-grid-list cols="2" rowHeight="3:1" [gutterSize]="'10px'">
+    <mat-grid-tile colspan=2>
+      <mat-grid-tile-header>I dette program kan du</mat-grid-tile-header>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Eveniet nulla architecto ipsum, hic labore eaque eos fuga quia beatae porro similique minima mollitia,
+      debitis omnis cupiditate totam exercitationem aliquam illo!
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+      <mat-grid-tile-header>Hvis du har problemer</mat-grid-tile-header>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Eveniet nulla architecto ipsum, hic labore eaque eos fuga quia beatae porro similique minima mollitia,
+      debitis omnis cupiditate totam exercitationem aliquam illo!
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+      <mat-grid-tile-header>Fremtiden</mat-grid-tile-header>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Eveniet nulla architecto ipsum, hic labore eaque eos fuga quia beatae porro similique minima mollitia,
+      debitis omnis cupiditate totam exercitationem aliquam illo!
+    </mat-grid-tile>
+
+  </mat-grid-list>
+</body>
+</html>
