--- a/Webinterface/frontend/src/app/navbar/navbar.component.html
+++ b/Webinterface/frontend/src/app/navbar/navbar.component.html
@@ -5,12 +5,10 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
+
     <mat-toolbar color="primary">
       <button
         type="button"
@@ -21,7 +19,12 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>WebInterface</span>
+      <span class="dummy"></span>
+      <mat-nav-list class="nav-links">
+        <a mat-list-item href="login">Login</a>
+      </mat-nav-list>
     </mat-toolbar>
     <!-- Add Content Here -->
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
